<resources>
  <string name="app_name">FarmBuddy</string>
  <string name="email_address">Email address</string>
  <string name="phone_number">Phone number</string>
  <string name="title_log_in">Log in</string>
  <string name="title_login">Login</string>
  <string name="forgot_password">Forgot password?</string>
  <string name="or">OR</string>
  <string name="sign_up">Sign up</string>
  <string name="title_sign_up">Sign up</string>
  <string name="get_otp">Get OTP</string>
  <string name="btn_already_registered">Already have an account? Log in</string>
  <string name="enter_otp">Enter OTP</string>
  <string name="verify_your_number">Verify your number</string>
  <string name="verify">Verify</string>
  <string name="category_hint">I\'m a …</string>
  <string name="next">Next</string>
  <string name="tell_us_about_yourself">Tell us about yourself</string>
  <string name="first_name">First Name</string>
  <string name="last_name">Last name</string>
  <string name="pan_number">PAN number</string>
  <string name="aadhar_number">Aadhar number</string>
  <string name="aadhar_info">Aadhar Info</string>
  <string name="bank_details">Bank details</string>
  <string name="choose_your_bank">Choose your bank</string>
  <string name="account_name">Account name</string>
  <string name="acc_helper">As displayed in your passbook</string>
  <string name="account_number">Account number</string>
  <string name="confirm_account_number">Confirm account number</string>
  <string name="ifsc_code">IFSC Code</string>
  <string name="select_state">Select state</string>
  <string name="district">District</string>
  <string name="settings">Settings</string>
  <string name="account">Account</string>
  <string name="search">Search</string>
  <string name="home">Home</string>
  <string name="cultivating_the_future">Cultivating\nThe Future</string>
  <string name="featured_post">Featured Post</string>
  <string name="see_all">See All</string>
  <string name="recommended_for_you">Recommended For You</string>
  <string name="new_resources">New resources</string>
  <string name="check_resources">Check resources</string>
  <string name="life_just_got_better">Life just got better</string>
  <string name="available_for_days">Available for %1$d days</string>
  <string name="rate_day">₹ %1$d / day</string>

  <string-array name="categories">
    <item>Small Farmer</item>
    <item>Big Farmer</item>
    <item>Manager</item>
  </string-array>

  <string-array name="india_states">
    <item>Andaman and Nicobar Islands</item>
    <item>Andhra Pradesh</item>
    <item>Arunachal Pradesh</item>
    <item>Assam</item>
    <item>Bihar</item>
    <item>Chandigarh</item>
    <item>Chhattisgarh</item>
    <item>Dadra and Nagar Haveli</item>
    <item>Daman and Diu</item>
    <item>Delhi</item>
    <item>Goa</item>
    <item>Gujarat</item>
    <item>Haryana</item>
    <item>Himachal Pradesh</item>
    <item>Jammu and Kashmir</item>
    <item>Jharkhand</item>
    <item>Karnataka</item>
    <item>Kerala</item>
    <item>Lakshadweep</item>
    <item>Madhya Pradesh</item>
    <item>Maharashtra</item>
    <item>Manipur</item>
    <item>Meghalaya</item>
    <item>Mizoram</item>
    <item>Nagaland</item>
    <item>Orissa</item>
    <item>Pondicherry</item>
    <item>Punjab</item>
    <item>Rajasthan</item>
    <item>Sikkim</item>
    <item>Tamil Nadu</item>
    <item>Telangana</item>
    <item>Tripura</item>
    <item>Uttaranchal</item>
    <item>Uttar Pradesh</item>
    <item>West Bengal</item>
  </string-array>

  <string-array name="india_banks">
    <item>ABHYUDAYA CO-OP BANK LTD</item>
    <item>ABU DHABI COMMERCIAL BANK</item>
    <item>AKOLA DISTRICT CENTRAL CO-OPERATIVE BANK</item>
    <item>AKOLA JANATA COMMERCIAL COOPERATIVE BANK</item>
    <item>ALLAHABAD BANK</item>
    <item>ALMORA URBAN CO-OPERATIVE BANK LTD.</item>
    <item>ANDHRA BANK</item>
    <item>ANDHRA PRAGATHI GRAMEENA BANK</item>
    <item>APNA SAHAKARI BANK LTD</item>
    <item>AUSTRALIA AND NEW ZEALAND BANKING GROUP LIMITED.</item>
    <item>AXIS BANK</item>
    <item>BANK INTERNASIONAL INDONESIA</item>
    <item>BANK OF AMERICA</item>
    <item>BANK OF BAHRAIN AND KUWAIT</item>
    <item>BANK OF BARODA</item>
    <item>BANK OF CEYLON</item>
    <item>BANK OF INDIA</item>
    <item>BANK OF MAHARASHTRA</item>
    <item>BANK OF TOKYO-MITSUBISHI UFJ LTD.</item>
    <item>BARCLAYS BANK PLC</item>
    <item>BASSEIN CATHOLIC CO-OP BANK LTD</item>
    <item>BHARATIYA MAHILA BANK LIMITED</item>
    <item>BNP PARIBAS</item>
    <item>CALYON BANK</item>
    <item>CANARA BANK</item>
    <item>CAPITAL LOCAL AREA BANK LTD.</item>
    <item>CATHOLIC SYRIAN BANK LTD.</item>
    <item>CENTRAL BANK OF INDIA</item>
    <item>CHINATRUST COMMERCIAL BANK</item>
    <item>CITIBANK NA</item>
    <item>CITIZENCREDIT CO-OPERATIVE BANK LTD</item>
    <item>CITY UNION BANK LTD</item>
    <item>COMMONWEALTH BANK OF AUSTRALIA</item>
    <item>CORPORATION BANK</item>
    <item>CREDIT SUISSE AG</item>
    <item>DBS BANK LTD</item>
    <item>DENA BANK</item>
    <item>DEUTSCHE BANK</item>
    <item>DEUTSCHE SECURITIES INDIA PRIVATE LIMITED</item>
    <item>DEVELOPMENT CREDIT BANK LIMITED</item>
    <item>DHANLAXMI BANK LTD</item>
    <item>DICGC</item>
    <item>DOMBIVLI NAGARI SAHAKARI BANK LIMITED</item>
    <item>FIRSTRAND BANK LIMITED</item>
    <item>GOPINATH PATIL PARSIK JANATA SAHAKARI BANK LTD</item>
    <item>GURGAON GRAMIN BANK</item>
    <item>HDFC BANK LTD</item>
    <item>HSBC</item>
    <item>ICICI BANK LTD</item>
    <item>IDBI BANK LTD</item>
    <item>IDRBT</item>
    <item>INDIAN BANK</item>
    <item>INDIAN OVERSEAS BANK</item>
    <item>INDUSIND BANK LTD</item>
    <item>INDUSTRIAL AND COMMERCIAL BANK OF CHINA LIMITED</item>
    <item>ING VYSYA BANK LTD</item>
    <item>JALGAON JANATA SAHKARI BANK LTD</item>
    <item>JANAKALYAN SAHAKARI BANK LTD</item>
    <item>JANASEVA SAHAKARI BANK (BORIVLI) LTD</item>
    <item>JANASEVA SAHAKARI BANK LTD. PUNE</item>
    <item>JANATA SAHAKARI BANK LTD (PUNE)</item>
    <item>JPMORGAN CHASE BANK N.A</item>
    <item>KALLAPPANNA AWADE ICH JANATA S BANK</item>
    <item>KAPOL CO OP BANK</item>
    <item>KARNATAKA BANK LTD</item>
    <item>KARNATAKA VIKAS GRAMEENA BANK</item>
    <item>KARUR VYSYA BANK</item>
    <item>KOTAK MAHINDRA BANK</item>
    <item>KURMANCHAL NAGAR SAHKARI BANK LTD</item>
    <item>MAHANAGAR CO-OP BANK LTD</item>
    <item>MAHARASHTRA STATE CO OPERATIVE BANK</item>
    <item>MASHREQBANK PSC</item>
    <item>MIZUHO CORPORATE BANK LTD</item>
    <item>MUMBAI DISTRICT CENTRAL CO-OP. BANK LTD.</item>
    <item>NAGPUR NAGRIK SAHAKARI BANK LTD</item>
    <item>NATIONAL AUSTRALIA BANK</item>
    <item>NEW INDIA CO-OPERATIVE BANK LTD.</item>
    <item>NKGSB CO-OP BANK LTD</item>
    <item>NORTH MALABAR GRAMIN BANK</item>
    <item>NUTAN NAGARIK SAHAKARI BANK LTD</item>
    <item>OMAN INTERNATIONAL BANK SAOG</item>
    <item>ORIENTAL BANK OF COMMERCE</item>
    <item>PARSIK JANATA SAHAKARI BANK LTD</item>
    <item>PRATHAMA BANK</item>
    <item>PRIME CO OPERATIVE BANK LTD</item>
    <item>PUNJAB AND MAHARASHTRA CO-OP BANK LTD.</item>
    <item>PUNJAB AND SIND BANK</item>
    <item>PUNJAB NATIONAL BANK</item>
    <item>RABOBANK INTERNATIONAL (CCRB)</item>
    <item>RAJGURUNAGAR SAHAKARI BANK LTD.</item>
    <item>RAJKOT NAGARIK SAHAKARI BANK LTD</item>
    <item>RESERVE BANK OF INDIA</item>
    <item>SBERBANK</item>
    <item>SHINHAN BANK</item>
    <item>SHRI CHHATRAPATI RAJARSHI SHAHU URBAN CO-OP BANK LTD</item>
    <item>SOCIETE GENERALE</item>
    <item>SOLAPUR JANATA SAHKARI BANK LTD.SOLAPUR</item>
    <item>SOUTH INDIAN BANK</item>
    <item>STANDARD CHARTERED BANK</item>
    <item>STATE BANK OF BIKANER AND JAIPUR</item>
    <item>STATE BANK OF HYDERABAD</item>
    <item>STATE BANK OF INDIA</item>
    <item>STATE BANK OF MAURITIUS LTD</item>
    <item>STATE BANK OF MYSORE</item>
    <item>STATE BANK OF PATIALA</item>
    <item>STATE BANK OF TRAVANCORE</item>
    <item>SUMITOMO MITSUI BANKING CORPORATION</item>
    <item>SYNDICATE BANK</item>
    <item>TAMILNAD MERCANTILE BANK LTD</item>
    <item>THANE BHARAT SAHAKARI BANK LTD</item>
    <item>THE A.P. MAHESH CO-OP URBAN BANK LTD.</item>
    <item>THE AHMEDABAD MERCANTILE CO-OPERATIVE BANK LTD.</item>
    <item>THE ANDHRA PRADESH STATE COOP BANK LTD</item>
    <item>THE BANK OF NOVA SCOTIA</item>
    <item>THE BANK OF RAJASTHAN LTD</item>
    <item>THE BHARAT CO-OPERATIVE BANK (MUMBAI) LTD</item>
    <item>THE COSMOS CO-OPERATIVE BANK LTD.</item>
    <item>THE DELHI STATE COOPERATIVE BANK LTD.</item>
    <item>THE FEDERAL BANK LTD</item>
    <item>THE GADCHIROLI DISTRICT CENTRAL COOPERATIVE BANK LTD</item>
    <item>THE GREATER BOMBAY CO-OP. BANK LTD</item>
    <item>THE GUJARAT STATE CO-OPERATIVE BANK LTD</item>
    <item>THE JALGAON PEOPLES CO-OP BANK</item>
    <item>THE JAMMU AND KASHMIR BANK LTD</item>
    <item>THE KALUPUR COMMERCIAL CO. OP. BANK LTD.</item>
    <item>THE KALYAN JANATA SAHAKARI BANK LTD.</item>
    <item>THE KANGRA CENTRAL CO-OPERATIVE BANK LTD</item>
    <item>THE KANGRA COOPERATIVE BANK LTD</item>
    <item>THE KARAD URBAN CO-OP BANK LTD</item>
    <item>THE KARNATAKA STATE APEX COOP. BANK LTD.</item>
    <item>THE LAKSHMI VILAS BANK LTD</item>
    <item>THE MEHSANA URBAN COOPERATIVE BANK LTD</item>
    <item>THE MUNICIPAL CO OPERATIVE BANK LTD MUMBAI</item>
    <item>THE NAINITAL BANK LIMITED</item>
    <item>THE NASIK MERCHANTS CO-OP BANK LTD. NASHIK</item>
    <item>THE RAJASTHAN STATE COOPERATIVE BANK LTD.</item>
    <item>THE RATNAKAR BANK LTD</item>
    <item>THE ROYAL BANK OF SCOTLAND N.V</item>
    <item>THE SAHEBRAO DESHMUKH CO-OP. BANK LTD.</item>
    <item>THE SARASWAT CO-OPERATIVE BANK LTD</item>
    <item>THE SEVA VIKAS CO-OPERATIVE BANK LTD (SVB)</item>
    <item>THE SHAMRAO VITHAL CO-OPERATIVE BANK LTD</item>
    <item>THE SURAT DISTRICT CO OPERATIVE BANK LTD.</item>
    <item>THE SURAT PEOPLES CO-OP BANK LTD</item>
    <item>THE SUTEX CO.OP. BANK LTD.</item>
    <item>THE TAMILNADU STATE APEX COOPERATIVE BANK LIMITED</item>
    <item>THE THANE DISTRICT CENTRAL CO-OP BANK LTD</item>
    <item>THE THANE JANATA SAHAKARI BANK LTD</item>
    <item>THE VARACHHA CO-OP. BANK LTD.</item>
    <item>THE VISHWESHWAR SAHAKARI BANK LTD. PUNE</item>
    <item>THE WEST BENGAL STATE COOPERATIVE BANK LTD</item>
    <item>TJSB SAHAKARI BANK LTD.</item>
    <item>TUMKUR GRAIN MERCHANTS COOPERATIVE BANK LTD.</item>
    <item>UBS AG</item>
    <item>UCO BANK</item>
    <item>UNION BANK OF INDIA</item>
    <item>UNITED BANK OF INDIA</item>
    <item>UNITED OVERSEAS BANK</item>
    <item>VASAI VIKAS SAHAKARI BANK LTD.</item>
    <item>VIJAYA BANK</item>
    <item>WEST BENGAL STATE COOPERATIVE BANK</item>
    <item>WESTPAC BANKING CORPORATION</item>
    <item>WOORI BANK</item>
    <item>YES BANK LTD</item>
    <item>ZILA SAHKARI BANK LTD GHAZIABAD</item>
  </string-array>
</resources>